[package]
name = "dec2hex"
version = "1.0.0"
authors = ["Toa Toastrejn <toa@toaaa.de>"]
edition = "2021"
description = "Simple cli tool to convert decimal to hexadecimal, even in bulk."
repository = "https://github.com/toaaa/dec2hex"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
rayon = "1.10.0"
